fixes playlist blurring

--- a/webapp/src/app/resource/components/protected-content/protected-content.component.scss
+++ b/webapp/src/app/resource/components/protected-content/protected-content.component.scss
@@ -2,8 +2,9 @@
   position: relative;
 
   &.obscured {
-    ::ng-deep > :not(sbdl-preview-login-prompt) {
-      filter: blur(10px);
+    ::ng-deep > *:not(sbdl-preview-login-prompt) {
+      display: block;
+      filter: blur(1rem);
       pointer-events: none;
       user-select: none;
     }
